# python-study

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
gevent-study/: gevent-README.md
main/: api.py  argparses.py  compatibility.py  datetimes.py  datetimes_python.py  download.py  file.py  input.py  jsons.py  loggings.py  network.py  randoms.py  regex.py  scheduler.py  scrapping.py  singleton.py  subprocesses.py  system.py  ta_lib.py  validation.py
main/async/: coroutine.py  joblib_parallels.py  multiprocessings.py  threads.py
main/basic/: argument.py  basic.py  char.py  class.py  decorator.py  dictionary.py  enums.py  exception.py  forLoop.py  function.py  generator.py  if.py  lambda.py  list.py  math.py  range.py  reduces.py  reflection.py  set.py  strings.py  type.py  variable.py
pip/: conda-environment.md  install.sh  virtual-env(deprecated).md  virtual-env-with-pipfile.md  virtual-env.md  virtual-env.sh
pyqt/: README.md  __init__.py  pyqt_architecture.py  pyqt_dialog.py  pyqt_layout.py  pyqt_qml.py  pyqt_signal.py  pyqt_style.py  pyqt_thread_timer.py  pyqt_ui.py  pyqt_ui.ui  pyqt_ui_with_uic.py  pyqt_widget.py  pyqt_widget_table.py  pyqt_widget_tree.py  qt.py
script/: build_install_local.sh  run_code_on_shell.sh
src/: class.py  commonFunction.py  dictionary.py  exception.py  forLoop.py  function.py  if.py  libraries.py  list.py  loggings.py  module.py  print.py  randoms.py  regex.py  set.py  string.py  strings.py  system.py  test.py  variable.py
study/: python_path.md  wheel.md
test/: __init__.py  test_mymath.py
(+14 files in other folders)
